<resources>
    <string name="app_name">RepairEstimate</string>
    <string name="account">Account</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="add_new_project">Add new project</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>
    <string name="name_project_dialog">Name project</string>
    <string name="edith_project">Edith project</string>
    <string name="dialog_edith">Edith</string>
    <string name="dialog_delete">Delete</string>
    <string name="employment">Employment</string>

    <string name="cost">Cost:</string>
    <string name="duration">Duration:</string>
    <string name="responsible">Responsible:</string>
    <string name="next">Next</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_error">Username can not be empty</string>
    <string name="volume_in_m3">Volume in M3</string>
    <string name="volume_in_m2">Volume in M2</string>
    <string name="employments">Employments</string>
    <string name="syrface_selection">Surface Selection</string>
    <string name="material_selection">Material selection</string>
    <string name="employment_selection">Employment Selection</string>
    <string name="enter_volume">Enter volume</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="volume">Volume:</string>
    <string name="report">Report</string>
</resources>
