<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/colorStageItem">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="@color/primary_text_default_material_light"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/til_responsible"
                android:text="@string/responsible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="75dp"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_stage_responsible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/til_responsible"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="75dp"
                android:gravity="right"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/til_duration"
                android:text="@string/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_responsible"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_stage_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/til_duration"
                android:layout_below="@+id/tv_stage_responsible"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/til_cost"
                android:text="@string/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/til_responsible"
                android:layout_toRightOf="@+id/til_duration"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_stage_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/til_cost"
                android:layout_below="@+id/tv_stage_responsible"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:gravity="right"
                android:textColor="@color/secondary_text_default_material_light"
                android:textSize="15sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>